[gd_scene load_steps=4 format=3 uid="uid://b6wjit3xp57ho"]

[ext_resource type="Theme" uid="uid://cad3ai3sxik1n" path="res://UI/byte_theme.tres" id="1_0eb2m"]
[ext_resource type="Script" path="res://UI/options.gd" id="1_8v3oe"]
[ext_resource type="FontFile" uid="uid://cgnsba01s1t0u" path="res://UI/assessts/NotJamFontPack/Not Jam Laika 11/Not Jam Laika 14.ttf" id="2_hlc5f"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_top = 20.0
offset_right = -12.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v3oe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 80.0
offset_right = 1688.0
offset_bottom = 994.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 60
theme_override_font_sizes/font_size = 80
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/icon_normal_color = Color(0.216729, 0.212999, 0.654894, 1)
theme_override_colors/icon_focus_color = Color(0.210223, 0.170974, 0.565033, 1)
theme_override_colors/icon_pressed_color = Color(0.182214, 0.213595, 0.57165, 1)
theme_override_colors/icon_hover_color = Color(0.193762, 0.169105, 0.581308, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.213907, 0.293355, 0.550015, 1)
theme_override_colors/icon_disabled_color = Color(0.205213, 0.178013, 0.420789, 1)
text = "Exit"

[node name="Popup" type="Popup" parent="MarginContainer/VBoxContainer"]
transparent_bg = true
initial_position = 2
size = Vector2i(980, 520)
visible = true
transparent = true

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/VBoxContainer/Popup"]

[node name="background" type="ColorRect" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_0eb2m")
color = Color(0.254906, 0.463524, 0.575963, 1)

[node name="SettingsTabs" type="TabContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background"]
custom_minimum_size = Vector2(980, 520)
layout_mode = 0
offset_right = 980.0
offset_bottom = 520.0
size_flags_horizontal = 10
theme = ExtResource("1_0eb2m")
current_tab = 0

[node name="Video" type="TabBar" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs"]
layout_mode = 2
theme = ExtResource("1_0eb2m")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -50.0
offset_right = -1.0
offset_bottom = 0.948517
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 92
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 40

[node name="Videosettings" type="GridContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 10
columns = 2

[node name="DisplayMode" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "FullScreen"

[node name="DisplayButton" type="CheckButton" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_0eb2m")
theme_override_fonts/font = ExtResource("2_hlc5f")
theme_override_font_sizes/font_size = 46
alignment = 2
icon_alignment = 2

[node name="BrightnessLabel" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 8
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="Audio" type="TabBar" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs"]
visible = false
layout_mode = 2
theme = ExtResource("1_0eb2m")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Audio settings" type="GridContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = -11
columns = 2

[node name="MasterVolLabel" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolLabel2" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Music Volume"

[node name="MusicVolSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SFXrVolLabel3" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "SFX Volume"

[node name="SFXVolSlider3" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 10
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Gameplay" type="TabBar" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs"]
visible = false
layout_mode = 2
theme = ExtResource("1_0eb2m")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Game settings" type="GridContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = -11
columns = 2

[node name="FovlLabel" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "FOV"

[node name="FOVBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.35
theme = ExtResource("1_0eb2m")

[node name="FovVal" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings/FOVBox"]
layout_mode = 2
size_flags_horizontal = 10
text = "70"

[node name="FovSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings/FOVBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 10
min_value = 30.0
value = 70.0

[node name="MouseLabel2" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Mouse sensitivity"

[node name="MouseBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.35
theme = ExtResource("1_0eb2m")

[node name="MouseVal" type="Label" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings/MouseBox"]
layout_mode = 2
text = ".1"

[node name="MouseSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Gameplay/MarginContainer/Game settings/MouseBox"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 10
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1
exp_edit = true

[connection signal="toggled" from="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings/DisplayButton" to="." method="_on_display_button_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Video/MarginContainer/Videosettings/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Popup/CanvasLayer/background/SettingsTabs/Audio/MarginContainer/Audio settings/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
